--- a/src/components/navbar.html
+++ b/src/components/navbar.html
@@ -1,34 +1,34 @@
-<nav class="text-white shadow-[0_10px_16px_rgba(112,228,170,0.4)] bg-black">
+<nav id="nav" class="transition-colors duration-300 bg-white text-[#70E4AA] dark:bg-black dark:text-white shadow-[0_10px_16px_rgba(112,228,170,0.4)] dark:shadow-[0_10px_16px_rgba(112,228,170,0.4)]">
   <div class="container mx-auto flex justify-between items-center py-4 px-6">
+
     <!-- Logo -->
     <a href="index.html" class="flex items-center space-x-2">
       <img src="./assets/main-is.png" class="h-20 w-auto" alt="Logo">
     </a>
 
-    <!-- Hamburger Button (Mobile) -->
-    <button id="menu-toggle" class="md:hidden text-2xl focus:outline-none">
+    <!-- Mobile Toggle -->
+    <button id="menu-toggle" class="md:hidden text-2xl focus:outline-none transition-transform duration-300">
       ☰
     </button>
 
-    <!-- Menu Links -->
-    <div id="menu" class="hidden md:flex md:items-center md:space-x-6 flex-col md:flex-row absolute md:static top-full left-0 w-full md:w-auto bg-black md:bg-transparent px-6 md:px-0 z-50">
-      <ul class="flex flex-col md:flex-row md:space-x-6 w-full md:w-auto text-center md:text-left">
+    <!-- Navigation Links -->
+    <div id="menu"
+      class="md:bg-transparent hidden absolute flex-col md:flex md:items-center md:space-x-6 md:flex-row md:static top-full left-0 w-full md:w-auto  bg-white text-black  dark:text-white px-6 md:px-0 z-50 transition-all duration-300 ease-in-out">
+      <ul class="flex flex-col items-center md:flex-row md:space-x-6 w-full md:w-auto text-center md:text-left">
         <li><a href="index.html" class="block py-3 md:py-[10px] relative after:content-[''] after:absolute after:bottom-0 after:left-0 after:h-[2px] after:w-full after:scale-x-0 after:origin-left after:transition-transform after:duration-300 after:ease-in-out after:bg-[#70E4AA] hover:after:scale-x-100">Home</a></li>
-
         <li><a href="about.html" class="block py-3 md:py-[10px] relative after:content-[''] after:absolute after:bottom-0 after:left-0 after:h-[2px] after:w-full after:scale-x-0 after:origin-left after:transition-transform after:duration-300 after:ease-in-out after:bg-[#70E4AA] hover:after:scale-x-100">About</a></li>
-
         <li><a href="services.html" class="block py-3 md:py-[10px] relative after:content-[''] after:absolute after:bottom-0 after:left-0 after:h-[2px] after:w-full after:scale-x-0 after:origin-left after:transition-transform after:duration-300 after:ease-in-out after:bg-[#70E4AA] hover:after:scale-x-100">Services</a></li>
-
         <li><a href="projects.html" class="block py-3 md:py-[10px] relative after:content-[''] after:absolute after:bottom-0 after:left-0 after:h-[2px] after:w-full after:scale-x-0 after:origin-left after:transition-transform after:duration-300 after:ease-in-out after:bg-[#70E4AA] hover:after:scale-x-100">Projects</a></li>
-
         <li><a href="contact.html" class="block py-3 md:py-[10px] relative after:content-[''] after:absolute after:bottom-0 after:left-0 after:h-[2px] after:w-full after:scale-x-0 after:origin-left after:transition-transform after:duration-300 after:ease-in-out after:bg-[#70E4AA] hover:after:scale-x-100">Contact</a></li>
-      </ul>
 
-      <!-- Dark/Light Mode Toggle -->
-      <button id="theme-toggle" class="ml-0 md:ml-4 bg-gray-700 p-2 rounded-full my-4 md:my-0">
-        ☀️
-      </button>
+        <!-- Theme Toggle -->
+        <li>
+          <button id="theme-toggle"
+            class="ml-0 self-center md:ml-4 bg-gray-200 dark:bg-gray-800 text-black dark:text-white p-2 rounded-full my-4 md:my-0 transition-colors duration-300">
+            ☀️
+          </button>
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
-
