--- a/src/components/navbar.html
+++ b/src/components/navbar.html
@@ -1,4 +1,4 @@
-<nav id="nav" class="transition-colors duration-300 bg-white text-[#70E4AA] dark:bg-[#04060b] dark:text-white shadow-[0_10px_16px_rgba(112,228,170,0.4)]">
+<nav id="nav" class="transition-colors relative z-[1] duration-200 bg-white text-black dark:bg-[#04060b] dark:text-white shadow-[0_10px_16px_rgba(112,228,170,0.4)]">
   <div class="container mx-auto flex justify-between items-center py-4 px-6">
 
     <!-- Logo -->
@@ -13,10 +13,10 @@
 
     <!-- Navigation Links -->
     <div id="menu"
-  class="md:bg-transparent hidden absolute flex-col md:flex md:items-center md:space-x-6 md:flex-row md:static top-full left-0 w-full md:w-auto  
+  class="md:bg-transparent hidden absolute  flex-col md:flex md:items-center md:space-x-6 md:flex-row md:static top-full left-0 w-full md:w-auto  
          bg-white text-black  
          dark:text-white 
-         px-6 md:px-0 z-50 transition-all duration-300 ease-in-out">
+         px-6 md:px-0  transition-all duration-200 ease-in-out">
 
       <ul class="flex flex-col items-center md:flex-row md:space-x-6 w-full md:w-auto text-center md:text-left">
         <li><a href="index.html" class="block py-3 md:py-[10px] relative after:content-[''] after:absolute after:bottom-0 after:left-0 after:h-[2px] after:w-full after:scale-x-0 after:origin-left after:transition-transform after:duration-300 after:ease-in-out after:bg-[#70E4AA] hover:after:scale-x-100">Home</a></li>
