--- a/src/components/hero.html
+++ b/src/components/hero.html
@@ -13,7 +13,7 @@
       Welcome to
       <span class="text-[#70E4AA] font-extrabold">Innovation Studio</span>
     </h1>
-    <p class="text-lg sm:text-xl mb-6 sm:mb-6">
+    <p class="text-lg sm:text-xl text-gray-700 dark:text-gray-300 mb-6 sm:mb-6">
       🚀 We Build Digital Experiences That Sell, Scale, and Stay in People’s
       Minds
     </p>
