--- a/src/output.css
+++ b/src/output.css
@@ -860,3 +860,7 @@
       background-size: 200% 200%;
       animation: gradient-slide 3s ease-in-out infinite;
     }
+
+  html{
+    overflow-x: hidden;
+  }
