--- a/src/components/hero.html
+++ b/src/components/hero.html
@@ -17,11 +17,11 @@
       🚀 We Build Digital Experiences That Sell, Scale, and Stay in People’s
       Minds
     </p>
-    <button
+    <a href="contact.html"><button
       class="text-white mb-6 sm:mb-0 font-semibold sm:px-16 px-10 py-3 text-lg rounded-2xl  transform transition hover:scale-105 bg-[linear-gradient(90deg,#70E4AA_0%,#04060b_50%,#70E4AA_100%)] dark:bg-[linear-gradient(90deg,#04060b_0%,#70E4AA_80%,#04060b_100%)] bg-[length:200%_200%] animate-gradient"
       aria-label="Get Started"
     >
       Get Started
-    </button>
+    </button></a>
   </div>
 </div>
