--- a/src/components/contactform.html
+++ b/src/components/contactform.html
@@ -1,4 +1,4 @@
-<form action="#" method="POST" class="space-y-3">
+<form class="space-y-3">
       <input type="text" placeholder="Your Name" 
         class="w-full p-2.5 text-sm rounded-lg border border-gray-300 dark:border-gray-700 bg-white dark:bg-gray-800" 
         required>
